--- a/src/assets/styles/mainpage.css
+++ b/src/assets/styles/mainpage.css
@@ -8,12 +8,13 @@ html, body {
     margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
-    width: 90%;
+    width: 100%;
     border: 0px #676767 dashed;
 }
 
 .tree-div {
-    width: 24%;
+    width: 23%;
+    margin-left: 5px;
     float: left;;
 }
 
@@ -27,7 +28,8 @@ html, body {
 }
 
 .terminal-div {
-    width: 74%;
+    width: 75%;
+    margin-right: 5px;
     float: right;
 }
 
